Fixed sizing and spacing

--- a/styles.css
+++ b/styles.css
@@ -22,27 +22,25 @@ h1 {
 
 .rating-p {
   color: hsl(217, 12%, 63%);
-  weight: 400;
+  weight: 300;
   font-size: 15px;
-  margin: 20px 0;
+  margin-top: 15px;
 }
 
 .card-rating {
   background: radial-gradient(circle at top, hsl(213, 19%, 18%), hsl(216, 12%, 8%));
-  height: 340px;
-  width: 300px;
+  height: 360px;
+  width: 320px;
   margin: auto;
   border-radius: 20px;
   padding: 24px;
-  /* HIDE THIS CARD */
-  display: none;
 }
 
 .star-container {
   background: hsl(213, 19%, 18%);
   border-radius: 30px;
-  height: 45px;
-  width: 45px;
+  height: 40px;
+  width: 40px;
   margin: 0;
   display: flex;
   align-items: center;
@@ -58,7 +56,7 @@ h1 {
   width: 100%;
   list-style-type: none;
   display: flex;
-  margin: 30px 0;
+  margin: 20px 0;
   padding: 0;
   justify-content: space-between;
 }
@@ -71,8 +69,8 @@ li {
   background: hsl(213, 19%, 18%);
   border: none;
   color: hsl(216, 12%, 54%);
-  height: 45px;
-  width: 45px;
+  height: 40px;
+  width: 40px;
   border-radius: 30px;
 }
 
@@ -91,7 +89,7 @@ li {
   border-radius: 30px;
   display: block;
   width: 100%;
-  padding: 15px;
+  padding: 12px;
 }
 
 .btn-submit:hover {
@@ -102,11 +100,12 @@ li {
 
 .card-thankyou {
   background: radial-gradient(circle at top, hsl(213, 19%, 18%), hsl(216, 12%, 8%));
-  height: 340px;
+  height: 360px;
   width: 320px;
   margin: auto;
   border-radius: 20px;
   padding: 20px;
+  display: none;
 }
 
 .img-container {
